--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,18 +22,19 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
 
     //Retrofit
+    //Okhttp
+    //Jackson
+    //Picasso
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit:converter-jackson:2.0.0-beta2'
-
-    //Okhttp
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okhttp:logging-interceptor:2.7.5'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
-
-    //Jackson
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.6.3'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
